# rust-api-backend

./: .env  Cargo.toml  README.md  db.sqlite
src/: lib.rs  main.rs
src/entities/: mod.rs  prelude.rs  tasks.rs  users.rs
src/handlers/: mod.rs  tasks.rs  users.rs
